[gd_scene load_steps=24 format=2]

[ext_resource path="res://skins/test_skin/approachcircle.png" type="Texture" id=1]
[ext_resource path="res://skins/test_skin/taikobigcircle.png" type="Texture" id=2]
[ext_resource path="res://temporary/scratchpad.png" type="Texture" id=3]
[ext_resource path="res://theme.tres" type="Theme" id=4]
[ext_resource path="res://temporary/brehd.png" type="Texture" id=5]
[ext_resource path="res://temporary/editor/select.png" type="Texture" id=6]
[ext_resource path="res://temporary/editor/spinner.png" type="Texture" id=7]
[ext_resource path="res://temporary/editor/roll.png" type="Texture" id=8]
[ext_resource path="res://temporary/editor/note.png" type="Texture" id=9]
[ext_resource path="res://editor/editor.gd" type="Script" id=10]
[ext_resource path="res://temporary/editor/togglefinisher_off.png" type="Texture" id=11]
[ext_resource path="res://editor/tab_manager.gd" type="Script" id=12]
[ext_resource path="res://editor/load_file.gd" type="Script" id=13]
[ext_resource path="res://temporary/editor/toggledon.png" type="Texture" id=14]
[ext_resource path="res://editor/save_file.gd" type="Script" id=15]
[ext_resource path="res://editor/select_matt.tres" type="Material" id=16]
[ext_resource path="res://editor/placer.gd" type="Script" id=17]
[ext_resource path="res://editor/metadata.gd" type="Script" id=18]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.129412, 0.129412, 0.129412, 1 )
border_width_top = 5
border_width_bottom = 5

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.203922, 0.203922, 0.203922, 1 )
border_width_bottom = 5
border_color = Color( 0.560784, 0.560784, 0.560784, 1 )

[sub_resource type="StyleBoxLine" id=4]
color = Color( 0.603922, 0.603922, 0.603922, 1 )
thickness = 2

[sub_resource type="StyleBoxLine" id=6]
color = Color( 0.466667, 0.682353, 0.839216, 1 )
thickness = 2

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 250, 250 )

[node name="Editor" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_top = -13.0
margin_right = 3.0
margin_bottom = -13.0
rect_pivot_offset = Vector2( -572, -55 )
theme = ExtResource( 4 )
script = ExtResource( 10 )

[node name="Main" type="VBoxContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -155.5
margin_bottom = 155.5
custom_constants/separation = 0

[node name="Display" type="Panel" parent="Main"]
margin_right = 1440.0
margin_bottom = 250.0
rect_min_size = Vector2( 0, 250 )
custom_styles/panel = SubResource( 1 )

[node name="HitPoint" type="TextureRect" parent="Main/Display"]
self_modulate = Color( 0.415686, 0.415686, 0.415686, 1 )
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 300.0
margin_top = -61.0
margin_right = 422.0
margin_bottom = 61.0
texture = ExtResource( 2 )
expand = true

[node name="Rim" type="TextureRect" parent="Main/Display/HitPoint"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -16.0
margin_top = -16.0
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 1 )
expand = true

[node name="ObjectContainer" type="Control" parent="Main/Display/HitPoint"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5

[node name="Placer" type="TextureRect" parent="Main/Display/HitPoint"]
self_modulate = Color( 0.921569, 0.270588, 0.172549, 0.501961 )
material = ExtResource( 16 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
script = ExtResource( 17 )

[node name="Chapters" type="HBoxContainer" parent="Main/Display"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -720.0
margin_top = -45.0
margin_right = 720.0
alignment = 1

[node name="Add" type="Button" parent="Main/Display/Chapters"]
margin_left = 614.0
margin_right = 664.0
margin_bottom = 45.0
rect_min_size = Vector2( 50, 0 )
text = "+"

[node name="Play" type="Button" parent="Main/Display/Chapters"]
margin_left = 668.0
margin_right = 718.0
margin_bottom = 45.0
rect_min_size = Vector2( 50, 0 )
text = "0"

[node name="Remove" type="Button" parent="Main/Display/Chapters"]
margin_left = 722.0
margin_right = 772.0
margin_bottom = 45.0
rect_min_size = Vector2( 50, 0 )
text = "-"

[node name="Swap" type="Button" parent="Main/Display/Chapters"]
margin_left = 776.0
margin_right = 826.0
margin_bottom = 45.0
rect_min_size = Vector2( 50, 0 )
toggle_mode = true
icon = ExtResource( 5 )
expand_icon = true

[node name="Density" type="Panel" parent="Main"]
visible = false
margin_top = 250.0
margin_right = 1440.0
margin_bottom = 311.0
rect_min_size = Vector2( 0, 61 )
custom_styles/panel = SubResource( 3 )

[node name="DensityPoints" type="HBoxContainer" parent="Main/Density"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 3.0
margin_right = -5.0
margin_bottom = -3.0

[node name="Control" type="Control" parent="Main/Density/DensityPoints"]
margin_right = 282.0
margin_bottom = 55.0
size_flags_horizontal = 3

[node name="ColorRect" type="ColorRect" parent="Main/Density/DensityPoints/Control"]
anchor_right = 1.0
margin_bottom = 10.0
size_flags_horizontal = 3
color = Color( 0, 0.6, 1, 1 )

[node name="Control2" type="Control" parent="Main/Density/DensityPoints"]
margin_left = 286.0
margin_right = 569.0
margin_bottom = 55.0
size_flags_horizontal = 3

[node name="ColorRect" type="ColorRect" parent="Main/Density/DensityPoints/Control2"]
anchor_right = 1.0
margin_bottom = 20.0
size_flags_horizontal = 3
color = Color( 0, 1, 0.788235, 1 )

[node name="Control4" type="Control" parent="Main/Density/DensityPoints"]
margin_left = 573.0
margin_right = 856.0
margin_bottom = 55.0
size_flags_horizontal = 3

[node name="ColorRect" type="ColorRect" parent="Main/Density/DensityPoints/Control4"]
anchor_right = 1.0
margin_bottom = 30.0
size_flags_horizontal = 3
color = Color( 0.313726, 1, 0, 1 )

[node name="Control5" type="Control" parent="Main/Density/DensityPoints"]
margin_left = 860.0
margin_right = 1143.0
margin_bottom = 55.0
size_flags_horizontal = 3

[node name="ColorRect" type="ColorRect" parent="Main/Density/DensityPoints/Control5"]
anchor_right = 1.0
margin_bottom = 40.0
size_flags_horizontal = 3
color = Color( 1, 0.819608, 0, 1 )

[node name="Control3" type="Control" parent="Main/Density/DensityPoints"]
margin_left = 1147.0
margin_right = 1430.0
margin_bottom = 55.0
size_flags_horizontal = 3

[node name="ColorRect" type="ColorRect" parent="Main/Density/DensityPoints/Control3"]
anchor_right = 1.0
margin_bottom = 50.0
size_flags_horizontal = 3
color = Color( 1, 0, 0, 1 )

[node name="Seeker" type="ColorRect" parent="Main/Density"]
anchor_bottom = 1.0
margin_left = 250.0
margin_right = 254.0
margin_bottom = -5.0

[node name="Timeline" type="Panel" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -62.0
margin_bottom = -2.0

[node name="Container" type="HBoxContainer" parent="Timeline"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 15

[node name="Control" type="Control" parent="Timeline/Container"]
margin_bottom = 60.0

[node name="Timestamp" type="Label" parent="Timeline/Container"]
margin_left = 15.0
margin_top = 10.0
margin_right = 127.0
margin_bottom = 49.0
text = "01:27:424"

[node name="Timeline" type="HSlider" parent="Timeline/Container"]
margin_left = 142.0
margin_right = 1134.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/slider = SubResource( 4 )
custom_styles/grabber_area_highlight = SubResource( 6 )
custom_styles/grabber_area = SubResource( 6 )
step = 0.0

[node name="Controls" type="HBoxContainer" parent="Timeline/Container"]
margin_left = 1149.0
margin_right = 1440.0
margin_bottom = 60.0

[node name="SkipBackwards" type="Button" parent="Timeline/Container/Controls"]
margin_right = 50.0
margin_bottom = 60.0
rect_min_size = Vector2( 50, 0 )
text = "|<"

[node name="Play" type="Button" parent="Timeline/Container/Controls"]
margin_left = 54.0
margin_right = 104.0
margin_bottom = 60.0
rect_min_size = Vector2( 50, 0 )
text = "▶"

[node name="Stop" type="Button" parent="Timeline/Container/Controls"]
margin_left = 108.0
margin_right = 158.0
margin_bottom = 60.0
rect_min_size = Vector2( 50, 0 )
text = "■"

[node name="SkipForward" type="Button" parent="Timeline/Container/Controls"]
margin_left = 162.0
margin_right = 212.0
margin_bottom = 60.0
rect_min_size = Vector2( 50, 0 )
text = ">|"

[node name="Test" type="Button" parent="Timeline/Container/Controls"]
margin_left = 216.0
margin_right = 291.0
margin_bottom = 60.0
rect_min_size = Vector2( 50, 0 )
text = "TEST"

[node name="Ex" type="Panel" parent="Timeline"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -185.0
margin_top = -40.0
margin_right = 185.0

[node name="Playback" type="HBoxContainer" parent="Timeline/Ex"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="25" type="Button" parent="Timeline/Ex/Playback"]
margin_left = 17.0
margin_right = 81.0
margin_bottom = 45.0
rect_min_size = Vector2( 50, 0 )
text = "25%"

[node name="50" type="Button" parent="Timeline/Ex/Playback"]
margin_left = 85.0
margin_right = 149.0
margin_bottom = 45.0
rect_min_size = Vector2( 50, 0 )
text = "50%"

[node name="75" type="Button" parent="Timeline/Ex/Playback"]
margin_left = 153.0
margin_right = 217.0
margin_bottom = 45.0
rect_min_size = Vector2( 50, 0 )
text = "75%"

[node name="100" type="Button" parent="Timeline/Ex/Playback"]
margin_left = 221.0
margin_right = 299.0
margin_bottom = 45.0
rect_min_size = Vector2( 50, 0 )
text = "100%"

[node name="Swap" type="Button" parent="Timeline/Ex/Playback"]
margin_left = 303.0
margin_right = 353.0
margin_bottom = 45.0
rect_min_size = Vector2( 50, 0 )
icon = ExtResource( 5 )
expand_icon = true

[node name="Chapters" type="HBoxContainer" parent="Timeline/Ex"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 5.0
alignment = 1

[node name="SkipBackwards" type="Button" parent="Timeline/Ex/Chapters"]
margin_left = 25.0
margin_right = 75.0
margin_bottom = 45.0
rect_min_size = Vector2( 50, 0 )
text = "|<"

[node name="Add" type="Button" parent="Timeline/Ex/Chapters"]
margin_left = 79.0
margin_right = 129.0
margin_bottom = 45.0
rect_min_size = Vector2( 50, 0 )
text = "+"

[node name="Play" type="Button" parent="Timeline/Ex/Chapters"]
margin_left = 133.0
margin_right = 183.0
margin_bottom = 45.0
rect_min_size = Vector2( 50, 0 )
text = "▶"

[node name="Remove" type="Button" parent="Timeline/Ex/Chapters"]
margin_left = 187.0
margin_right = 237.0
margin_bottom = 45.0
rect_min_size = Vector2( 50, 0 )
text = "-"

[node name="SkipForward" type="Button" parent="Timeline/Ex/Chapters"]
margin_left = 241.0
margin_right = 291.0
margin_bottom = 45.0
rect_min_size = Vector2( 50, 0 )
text = ">|"

[node name="Swap" type="Button" parent="Timeline/Ex/Chapters"]
margin_left = 295.0
margin_right = 345.0
margin_bottom = 45.0
rect_min_size = Vector2( 50, 0 )
icon = ExtResource( 5 )
expand_icon = true

[node name="Scratchpad" type="WindowDialog" parent="."]
margin_left = 17.0
margin_top = 726.0
margin_right = 457.0
margin_bottom = 1004.0
window_title = "Scratchpad"
resizable = true

[node name="Button" type="Button" parent="Scratchpad"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
custom_styles/normal = SubResource( 2 )

[node name="HitPoint" type="TextureRect" parent="Scratchpad/Button"]
modulate = Color( 1, 1, 1, 0.490196 )
self_modulate = Color( 1, 1, 1, 0.705882 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -61.0
margin_top = -61.0
margin_right = 61.0
margin_bottom = 61.0
texture = ExtResource( 2 )
expand = true

[node name="Rim" type="TextureRect" parent="Scratchpad/Button/HitPoint"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -16.0
margin_top = -16.0
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 1 )
expand = true

[node name="Tools" type="WindowDialog" parent="."]
visible = true
margin_left = 17.0
margin_top = 165.0
margin_right = 343.0
margin_bottom = 369.0
window_title = "Tools"
__meta__ = {
"_edit_group_": true
}

[node name="GridContainer" type="GridContainer" parent="Tools"]
anchor_right = 1.0
anchor_bottom = 1.0
columns = 3

[node name="Select" type="Button" parent="Tools/GridContainer"]
margin_right = 106.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3
icon = ExtResource( 6 )
expand_icon = true

[node name="Note" type="Button" parent="Tools/GridContainer"]
margin_left = 110.0
margin_right = 216.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3
icon = ExtResource( 9 )
expand_icon = true

[node name="ToggleKat" type="Button" parent="Tools/GridContainer"]
margin_left = 220.0
margin_right = 326.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3
icon = ExtResource( 14 )
expand_icon = true

[node name="Roll" type="Button" parent="Tools/GridContainer"]
margin_top = 104.0
margin_right = 106.0
margin_bottom = 204.0
size_flags_horizontal = 3
size_flags_vertical = 3
icon = ExtResource( 8 )
expand_icon = true

[node name="Spin" type="Button" parent="Tools/GridContainer"]
margin_left = 110.0
margin_top = 104.0
margin_right = 216.0
margin_bottom = 204.0
size_flags_horizontal = 3
size_flags_vertical = 3
icon = ExtResource( 7 )
expand_icon = true

[node name="ToggleFinisher" type="Button" parent="Tools/GridContainer"]
margin_left = 220.0
margin_top = 104.0
margin_right = 326.0
margin_bottom = 204.0
size_flags_horizontal = 3
size_flags_vertical = 3
icon = ExtResource( 11 )
expand_icon = true

[node name="Metadata" type="WindowDialog" parent="."]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 274.0
margin_top = -443.0
margin_right = 600.0
margin_bottom = -172.0
window_title = "Metadata"
script = ExtResource( 18 )
__meta__ = {
"_edit_group_": true
}

[node name="ScrollContainer" type="ScrollContainer" parent="Metadata"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Metadata/ScrollContainer"]
margin_right = 326.0
margin_bottom = 261.0
size_flags_horizontal = 3

[node name="Title" type="HBoxContainer" parent="Metadata/ScrollContainer/VBoxContainer"]
margin_right = 326.0
margin_bottom = 49.0

[node name="Label" type="Label" parent="Metadata/ScrollContainer/VBoxContainer/Title"]
margin_top = 5.0
margin_right = 54.0
margin_bottom = 44.0
text = "Title"

[node name="Buffer" type="Control" parent="Metadata/ScrollContainer/VBoxContainer/Title"]
margin_left = 58.0
margin_right = 147.0
margin_bottom = 49.0
size_flags_horizontal = 3

[node name="LineEdit" type="LineEdit" parent="Metadata/ScrollContainer/VBoxContainer/Title"]
margin_left = 151.0
margin_right = 326.0
margin_bottom = 49.0
rect_min_size = Vector2( 175, 0 )
size_flags_horizontal = 3

[node name="Artist" type="HBoxContainer" parent="Metadata/ScrollContainer/VBoxContainer"]
margin_top = 53.0
margin_right = 326.0
margin_bottom = 102.0

[node name="Label" type="Label" parent="Metadata/ScrollContainer/VBoxContainer/Artist"]
margin_top = 5.0
margin_right = 65.0
margin_bottom = 44.0
text = "Artist"

[node name="Buffer" type="Control" parent="Metadata/ScrollContainer/VBoxContainer/Artist"]
margin_left = 69.0
margin_right = 147.0
margin_bottom = 49.0
size_flags_horizontal = 3

[node name="LineEdit" type="LineEdit" parent="Metadata/ScrollContainer/VBoxContainer/Artist"]
margin_left = 151.0
margin_right = 326.0
margin_bottom = 49.0
rect_min_size = Vector2( 175, 0 )
size_flags_horizontal = 3

[node name="Difficulty" type="HBoxContainer" parent="Metadata/ScrollContainer/VBoxContainer"]
margin_top = 106.0
margin_right = 326.0
margin_bottom = 155.0
rect_pivot_offset = Vector2( -429, 0 )

[node name="Label" type="Label" parent="Metadata/ScrollContainer/VBoxContainer/Difficulty"]
margin_top = 5.0
margin_right = 108.0
margin_bottom = 44.0
text = "Difficulty"

[node name="Buffer" type="Control" parent="Metadata/ScrollContainer/VBoxContainer/Difficulty"]
margin_left = 112.0
margin_right = 147.0
margin_bottom = 49.0
size_flags_horizontal = 3

[node name="LineEdit" type="LineEdit" parent="Metadata/ScrollContainer/VBoxContainer/Difficulty"]
margin_left = 151.0
margin_right = 326.0
margin_bottom = 49.0
rect_min_size = Vector2( 175, 0 )
size_flags_horizontal = 3

[node name="Charter" type="HBoxContainer" parent="Metadata/ScrollContainer/VBoxContainer"]
margin_top = 159.0
margin_right = 326.0
margin_bottom = 208.0

[node name="Label" type="Label" parent="Metadata/ScrollContainer/VBoxContainer/Charter"]
margin_top = 5.0
margin_right = 92.0
margin_bottom = 44.0
text = "Charter"

[node name="Buffer" type="Control" parent="Metadata/ScrollContainer/VBoxContainer/Charter"]
margin_left = 96.0
margin_right = 147.0
margin_bottom = 49.0
size_flags_horizontal = 3

[node name="LineEdit" type="LineEdit" parent="Metadata/ScrollContainer/VBoxContainer/Charter"]
margin_left = 151.0
margin_right = 326.0
margin_bottom = 49.0
rect_min_size = Vector2( 175, 0 )
size_flags_horizontal = 3

[node name="OD" type="HBoxContainer" parent="Metadata/ScrollContainer/VBoxContainer"]
margin_top = 212.0
margin_right = 326.0
margin_bottom = 261.0

[node name="Label" type="Label" parent="Metadata/ScrollContainer/VBoxContainer/OD"]
margin_top = 5.0
margin_right = 37.0
margin_bottom = 44.0
text = "OD"

[node name="Buffer" type="Control" parent="Metadata/ScrollContainer/VBoxContainer/OD"]
margin_left = 41.0
margin_right = 224.0
margin_bottom = 49.0
size_flags_horizontal = 3

[node name="SpinBox" type="SpinBox" parent="Metadata/ScrollContainer/VBoxContainer/OD"]
margin_left = 228.0
margin_right = 326.0
margin_bottom = 49.0
max_value = 10.0

[node name="Preview" type="HBoxContainer" parent="Metadata/ScrollContainer/VBoxContainer"]
visible = false
margin_top = 225.0
margin_right = 314.0
margin_bottom = 264.0

[node name="Label" type="Label" parent="Metadata/ScrollContainer/VBoxContainer/Preview"]
margin_right = 96.0
margin_bottom = 39.0
text = "Preview"

[node name="TextEdit" type="TextEdit" parent="Metadata/ScrollContainer/VBoxContainer/Preview"]
margin_left = 100.0
margin_right = 314.0
margin_bottom = 39.0
size_flags_horizontal = 3

[node name="FolderPath" type="HBoxContainer" parent="Metadata/ScrollContainer/VBoxContainer"]
visible = false
margin_top = 215.0
margin_right = 314.0
margin_bottom = 254.0

[node name="Label" type="Label" parent="Metadata/ScrollContainer/VBoxContainer/FolderPath"]
margin_right = 140.0
margin_bottom = 39.0
text = "Folder Path"

[node name="TextEdit" type="TextEdit" parent="Metadata/ScrollContainer/VBoxContainer/FolderPath"]
margin_left = 144.0
margin_right = 314.0
margin_bottom = 39.0
size_flags_horizontal = 3

[node name="BGFileName" type="HBoxContainer" parent="Metadata/ScrollContainer/VBoxContainer"]
visible = false
margin_top = 215.0
margin_right = 314.0
margin_bottom = 254.0

[node name="Label" type="Label" parent="Metadata/ScrollContainer/VBoxContainer/BGFileName"]
margin_right = 35.0
margin_bottom = 39.0
text = "BG"

[node name="TextEdit" type="TextEdit" parent="Metadata/ScrollContainer/VBoxContainer/BGFileName"]
margin_left = 39.0
margin_right = 314.0
margin_bottom = 39.0
size_flags_horizontal = 3

[node name="AudioFileName" type="HBoxContainer" parent="Metadata/ScrollContainer/VBoxContainer"]
visible = false
margin_top = 215.0
margin_right = 314.0
margin_bottom = 254.0

[node name="Label" type="Label" parent="Metadata/ScrollContainer/VBoxContainer/AudioFileName"]
margin_right = 71.0
margin_bottom = 39.0
text = "Audio"

[node name="TextEdit" type="TextEdit" parent="Metadata/ScrollContainer/VBoxContainer/AudioFileName"]
margin_left = 75.0
margin_right = 314.0
margin_bottom = 39.0
size_flags_horizontal = 3

[node name="Timing" type="WindowDialog" parent="."]
margin_left = 447.0
margin_top = 101.0
margin_right = 1384.0
margin_bottom = 379.0
window_title = "Timing"
resizable = true

[node name="Debug" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -364.0
margin_right = 372.0
margin_bottom = -61.0
text = "currentTool: 0"
valign = 2

[node name="Top" type="Panel" parent="."]
anchor_right = 1.0
margin_bottom = 50.0
script = ExtResource( 12 )

[node name="HBoxContainer" type="HBoxContainer" parent="Top"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="File" type="Button" parent="Top/HBoxContainer"]
margin_right = 54.0
margin_bottom = 50.0
text = "File"

[node name="PopupMenu" type="PopupMenu" parent="Top/HBoxContainer/File"]
margin_left = -3.0
margin_top = 52.0
margin_right = 234.0
margin_bottom = 545.0
items = [ "New", null, 0, false, false, 0, 0, null, "", false, "Load", null, 0, false, false, 1, 0, null, "", false, "Save", null, 0, false, false, 2, 0, null, "", false, "", null, 0, false, true, 3, 0, null, "", true, "Revert to Saved", null, 0, false, false, 4, 0, null, "", false, "Import", null, 0, false, false, 5, 0, null, "", false, "Export", null, 0, false, false, 6, 0, null, "", false, "", null, 0, false, true, 7, 0, null, "", true, "Open Song Folder", null, 0, false, false, 8, 0, null, "", false, "Open .fus File", null, 0, false, false, 9, 0, null, "", false, "", null, 0, false, true, 10, 0, null, "", true, "Exit", null, 0, false, false, 11, 0, null, "", false ]

[node name="Edit" type="Button" parent="Top/HBoxContainer"]
margin_left = 58.0
margin_right = 118.0
margin_bottom = 50.0
text = "Edit"

[node name="PopupMenu" type="PopupMenu" parent="Top/HBoxContainer/Edit"]
margin_left = -3.0
margin_top = 52.0
margin_right = 224.0
margin_bottom = 115.0
items = [ "Undo", null, 0, false, false, 0, 0, null, "", false, "Redo", null, 0, false, false, 1, 0, null, "", false, "", null, 0, false, true, 2, 0, null, "", true, "Cut", null, 0, false, false, 3, 0, null, "", false, "Copy", null, 0, false, false, 4, 0, null, "", false, "Paste", null, 0, false, false, 5, 0, null, "", false, "Delete", null, 0, false, false, 6, 0, null, "", false, "", null, 0, false, true, 7, 0, null, "", true, "Select All", null, 0, false, false, 8, 0, null, "", false, "Invert Selection", null, 0, false, false, 9, 0, null, "", false, "", null, 0, false, true, 10, 0, null, "", true, "Invert Notes", null, 0, false, false, 11, 0, null, "", false ]

[node name="View" type="Button" parent="Top/HBoxContainer"]
margin_left = 122.0
margin_right = 191.0
margin_bottom = 50.0
text = "View"

[node name="PopupMenu" type="PopupMenu" parent="Top/HBoxContainer/View"]
margin_left = -3.0
margin_top = 52.0
margin_right = 104.0
margin_bottom = 115.0
items = [ "Tools", null, 1, false, false, 0, 0, null, "", false, "Timing", null, 1, false, false, 1, 0, null, "", false, "Metadata", null, 1, false, false, 2, 0, null, "", false, "", null, 0, false, true, 3, 0, null, "", true, "Waveform", null, 1, false, false, 4, 0, null, "", false, "Density Graph", null, 1, false, false, 5, 0, null, "", false ]

[node name="Help" type="Button" parent="Top/HBoxContainer"]
margin_left = 195.0
margin_right = 263.0
margin_bottom = 50.0
text = "Help"

[node name="PopupMenu" type="PopupMenu" parent="Top/HBoxContainer/Help"]
margin_left = -3.0
margin_top = 52.0
margin_right = 260.0
margin_bottom = 158.0
items = [ "Github", null, 0, false, false, 0, 0, null, "", false, "TaiClone Editor v0.1", null, 0, false, true, 1, 0, null, "", false ]

[node name="LoadFile" type="Node" parent="."]
script = ExtResource( 13 )

[node name="SaveFile" type="Node" parent="."]
script = ExtResource( 15 )

[node name="FileDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -633.5
margin_top = -422.0
margin_right = 633.5
margin_bottom = 422.0
window_title = "Open a File"
mode = 0
access = 2

[connection signal="pressed" from="Main/Display/Chapters/Add" to="." method="change_editor_speed" binds= [ 0.1 ]]
[connection signal="pressed" from="Main/Display/Chapters/Play" to="." method="change_editor_speed" binds= [ 0.0 ]]
[connection signal="pressed" from="Main/Display/Chapters/Remove" to="." method="change_editor_speed" binds= [ -0.1 ]]
[connection signal="toggled" from="Main/Display/Chapters/Swap" to="." method="change_playfield_view"]
[connection signal="drag_ended" from="Timeline/Container/Timeline" to="." method="timelineDrag" binds= [ false ]]
[connection signal="drag_started" from="Timeline/Container/Timeline" to="." method="timelineDrag" binds= [ false, true ]]
[connection signal="pressed" from="Timeline/Container/Controls/Play" to="." method="playPause"]
[connection signal="pressed" from="Timeline/Container/Controls/Stop" to="." method="stopMusic"]
[connection signal="pressed" from="Timeline/Ex/Playback/25" to="." method="change_speed" binds= [ 0.25 ]]
[connection signal="pressed" from="Timeline/Ex/Playback/50" to="." method="change_speed" binds= [ 0.5 ]]
[connection signal="pressed" from="Timeline/Ex/Playback/75" to="." method="change_speed" binds= [ 0.75 ]]
[connection signal="pressed" from="Timeline/Ex/Playback/100" to="." method="change_speed" binds= [ 1.0 ]]
[connection signal="pressed" from="Timeline/Ex/Playback/Swap" to="." method="changeExTimelineFlip"]
[connection signal="pressed" from="Timeline/Ex/Chapters/Play" to="." method="playPause"]
[connection signal="pressed" from="Timeline/Ex/Chapters/Swap" to="." method="changeExTimelineFlip"]
[connection signal="pressed" from="Tools/GridContainer/Select" to="." method="changeTool" binds= [ 0 ]]
[connection signal="pressed" from="Tools/GridContainer/Note" to="." method="changeTool" binds= [ 1 ]]
[connection signal="pressed" from="Tools/GridContainer/ToggleKat" to="." method="changeTool" binds= [ -1 ]]
[connection signal="pressed" from="Tools/GridContainer/Roll" to="." method="changeTool" binds= [ 2 ]]
[connection signal="pressed" from="Tools/GridContainer/Spin" to="." method="changeTool" binds= [ 3 ]]
[connection signal="pressed" from="Tools/GridContainer/ToggleFinisher" to="." method="changeTool" binds= [ -2 ]]
[connection signal="text_entered" from="Metadata/ScrollContainer/VBoxContainer/Title/LineEdit" to="." method="edit_metadata" binds= [ "title" ]]
[connection signal="text_entered" from="Metadata/ScrollContainer/VBoxContainer/Artist/LineEdit" to="." method="edit_metadata" binds= [ "artist" ]]
[connection signal="text_entered" from="Metadata/ScrollContainer/VBoxContainer/Difficulty/LineEdit" to="." method="edit_metadata" binds= [ "difficulty" ]]
[connection signal="text_entered" from="Metadata/ScrollContainer/VBoxContainer/Charter/LineEdit" to="." method="edit_metadata" binds= [ "charter" ]]
[connection signal="value_changed" from="Metadata/ScrollContainer/VBoxContainer/OD/SpinBox" to="Metadata" method="edit_metadata" binds= [ "od" ]]
[connection signal="pressed" from="Top/HBoxContainer/File" to="Top" method="openMenu" binds= [ "file" ]]
[connection signal="id_pressed" from="Top/HBoxContainer/File/PopupMenu" to="." method="topOptionSelected" binds= [ "file" ]]
[connection signal="pressed" from="Top/HBoxContainer/Edit" to="Top" method="openMenu" binds= [ "edit" ]]
[connection signal="pressed" from="Top/HBoxContainer/View" to="Top" method="openMenu" binds= [ "view" ]]
[connection signal="id_pressed" from="Top/HBoxContainer/View/PopupMenu" to="." method="topOptionSelected" binds= [ "view" ]]
[connection signal="pressed" from="Top/HBoxContainer/Help" to="Top" method="openMenu" binds= [ "help" ]]
[connection signal="id_pressed" from="Top/HBoxContainer/Help/PopupMenu" to="Top" method="openGithub"]
[connection signal="file_selected" from="FileDialog" to="." method="file_dialog_used"]
